--- a/Session-30/FuelStation/FuelStation.EF/FuelStation.EF.csproj
+++ b/Session-30/FuelStation/FuelStation.EF/FuelStation.EF.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FuelStation.Model\FuelStation.Model.csproj" />
     <ProjectReference Include="..\FuelStation\FuelStation.Model.csproj" />
   </ItemGroup>
 
